--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -360,10 +360,10 @@
     \subsection{Integrating interaction strengths into models of population dynamics}
 
         \paragraph{}
-        In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal individuals $P_i$ may not always directly translate into estimates of lifetime reproductive success due to inherent practical constraints with collecting empirical data. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. In this scenario, a population dynamic model can be used to translate interation effects on the measured variable into interaction strengths affecting the variable of interest. 
+        In certain instances, models of population dynamics can be used to further extend the usefulness of the framework presented here. We suggest two cases where such an application may be useful. Firtly, the variable chosen to measure the performance of focal individuals $P_i$ may not always directly translate into estimates of lifetime reproductive success due to inherent practical constraints with collecting empirical data. For example, certain life-history reproductive strategies may lead to measures of high seed production in the field which do not account for low seed or seedling survival rates post-observation. In these cases, population dynamics models can be used to account for species-specific demographic rates into estimates of interaction effects. Alternatively, we might be more interested in the effects of neighbours on the abundance or growth rate of a focal species rather than on it's proxy for lifetime reproductive success. In this scenario, a population dynamic model can be used to translate interaction effects on the measured variable into interaction strengths affecting the variable of interest. 
 
         \paragraph{}
-        In both cases, an established population dynamic model is required as well as knowledge of any crucial demographic rates. This step is illustrated in our case study below, where an annual plant population dynamic model is used to transform effects on wildfower seed production (the measured proxy for lifetime reproductive success) into effects on population growth, and include species-specific estimates of seed germination and survival rates. 
+        In both cases, an established population dynamic model is required as well as knowledge of any crucial demographic rates. This step is illustrated in our case study below, where an annual plant population dynamic model is used to transform effects on wildfower seed production (the measured proxy for lifetime reproductive success) into effects on population growth, and includes species-specific estimates of seed germination and survival rates. 
 
         % \paragraph{}
         % Though this rescaling is not necessary when interactions are quantified as effects on rates such as growth or biomass accumulation, it is particularly useful in cases where $P_i$ is captured by variables which are affected by r/K reproductive strategies, such as seed or fruit production. Species $i$ for example may produce a high number of seeds of which few are viable, whereas species $j$ produces very few seeds though these are much more likely to mature into reproductive adults. Scaling the interaction terms returned by the models allows us to compare how species $i$ and $j$ both respond to interactions, relative to their performance. [MOVE TO DISCUSSIO?]
