formating title page, keywords etc - TBF

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -33,28 +33,57 @@
 
 \onehalfspacing % line spacing 1.5 for thesis formatting
 
-\title{Estimating interaction matrices for diverse, horizontal systems}
+\title{\large Estimating interaction matrices for diverse, horizontal systems}
 
 
-\author[1]{Malyon D. Bimler}
-\author[1]{Margaret M. Mayfield}
-\author[2]{Trace E. Martyn}
-\author[3]{Daniel B. Stouffer}
+
+\author[1]{\small Malyon D. Bimler *}
+\author[2]{\small Margaret M. Mayfield}
+\author[3]{\small Trace E. Martyn}
+\author[4]{\small Daniel B. Stouffer}
+
+\affil[1]{\footnotesize School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia. Email: malyonbimler@gmail.com}
+\affil[2]{\footnotesize School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia. Email: m.mayfield@uq.edu.au }
+\affil[3]{\footnotesize School of Natural Resources and the Environment, The University of Arizona, Tucson, USA. Email: tmartyn@arizona.edu }
+\affil[4]{\footnotesize Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand. Email: daniel.stouffer@canterbury.ac.nz }
 
 
-\affil[1]{School of Biological Sciences, The University of Queensland, St Lucia, Queensland, Australia.}
-\affil[2]{School of Natural Resources and the Environment, The University of Arizona, Tucson, USA}
-\affil[3]{Centre for Integrative Ecology, School of Biological Sciences, University of Canterbury, Christchurch, New Zealand}
-
-% \date{} % supresses date
-
-% \setcounter{page}{70}
 
 \setlength{\intextsep}{10ex}
 
 \begin{document}
 \maketitle  
+
+\noindent
+\textbf{Running title:} Estimating horizontal interaction matrices
+
+\noindent
+\textbf{Corresponding Author:} Malyon D. Bimler, email: malyonbimler@gmail.com, ph: +64 481941634\\
+
+
+\noindent
+Manuscript submitted for consideration as a \textbf{Method} article.
+
+
+\noindent
+Number of words - Abstract: 150\\
+Number of words - main text: 
+Figures \&  Table in main text.\\
+Number of references: XX\\
+
+\noindent
+\textbf{Keywords:} Species interactions, competition, facilitation, networks, population dynamics, non-trophic, ....  
+
+\section*{Author contributions}
+
+M.D.B. designed the methodology, carried out analyses and led the drafting of the manuscript. D.B.S. helped design the methodology and interpret analyses and critically revised the manuscript. T.E.M. led the field study and data collection. M.M.M. helped design the field study, collected data, contributed to the interpretation of analyses and critically revised the manuscript. [DOES THIS NEED TO CHANGE??]
+
+\section*{Data accessibility}
+
+Data will be submitted to Dryad upon publication.
+
 \newpage
+
 \setcounter{secnumdepth}{3} % sections are level 1
 
 \linenumbers
