edited abstractedited abstract to 147 words

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -20,7 +20,7 @@
     \usepackage[margin=20mm]{geometry} % set exact margins for thesis
 
 % REFERENCES
-    \usepackage[giveninits=true, backend=biber, style=authoryear]{biblatex}
+    \usepackage[firstinits=true, backend=biber, style=authoryear]{biblatex}
     \DeclareNameAlias{sortname}{last-first}
 
     \addbibresource{../../../BibTex_files/03_Chapter3.bib}
@@ -84,7 +84,7 @@ Data will be submitted to Dryad upon publication.
 
 \newpage
 
-\setcounter{secnumdepth}{3} % sections are level 1
+% \setcounter{secnumdepth}{3} % sections are level 1
 
 \linenumbers
 
@@ -97,7 +97,7 @@ Data will be submitted to Dryad upon publication.
 % online Methods separate
 
     \paragraph{}
-    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual performance in the absence and presence of their potential interaction partners. We apply this framework to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how this method can be applied in an ecological context to better understand and manage plant communities, with potential applications of this framework extending beyond ecological systems.}
+    \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual performance in the absence and presence of their potential interaction partners. We apply our method to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how these results can help us better understand and manage plant communities, with potential applications of this framework extending well beyond plant community ecology.}
 
 
 
