--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -113,7 +113,7 @@ Data will be submitted to Dryad upon publication.
 % Current = 580 words
     
     \paragraph{}
-    In many biological systems, interactions between system elements affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002}.
+    In many biological systems, interactions between system elements affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
 
     \paragraph{}
     %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
@@ -123,11 +123,11 @@ Data will be submitted to Dryad upon publication.
     %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases by $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which are flexible to greater model complexity. We specify a multi-tiered model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from a spatial-abundance association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which....... We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from a spatial-abundance association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
 
     %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
 
