--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -88,13 +88,7 @@ Data will be submitted to Dryad upon publication.
 
 \linenumbers
 
-
-% \section*{Abstract}
-
-% Submit to Nature Methods
-% Follow Nourizonoz et al 2020 (17, pages 1052–1059) as a guide 
-% Main text: 2500 - 3500 words (excluding Methods), ~ 40 references
-% online Methods separate
+% Submit to Ecology Letters as a Method
 
     \paragraph{}
     \textbf{Network theory allows us to understand complex systems by evaluating how their constituent elements interact with one another. Quantifying these interaction matrices from empirical data can be difficult however, because the number of potential interactions increases non-linearly as more elements are included in the system, and not all interactions may be empirically observable when some elements are rare. We present a novel modelling framework which estimates realised and unrealised interactions in diverse horizontal systems, using measures of individual performance in the absence and presence of their potential interaction partners. We apply our method to an ecological dataset of an annual wildflower community and quantify the competitive and facilitative effects of 52 neighbouring species on the viable seed production of 22 focal species. We illustrate how these results can help us better understand and manage plant communities, with potential applications of this framework extending well beyond plant community ecology.}
@@ -103,42 +97,29 @@ Data will be submitted to Dryad upon publication.
 
 \section{Introduction}
 
-% Things the intro needs to do: 
-% general intro to network analysis 
-% define horizontal systems
-% in an ecological context... 
-% broad definition of performance? or definition of interaction - should be tied to definition of horizontal system. 
-
-% Word count aim: 500-1000 
-% Current = 580 words
     
     \paragraph{}
-    In many biological systems, interactions between system elements affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Fundamentally, biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
+    In many biological systems, interactions between system elements (be these species, individuals etc.) affect performance and together determine the dynamics of the whole system. In order to understand system dynamics when multiple system elements are involved, such complex systems can be represented as networks where the elements are nodes and linked by interactions \parencite{Pimm1978}. These nodes can take on a wide array of identities, including cells, individuals, populations or species. Likewise, interactions or links can operate via many different mechanisms and have a wide range of effects on the nodes. Biological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these systems \parencite{Dunne2002, Kinlock2019}.
 
     \paragraph{}
-    %Need a section here describing horizontal / single-trophic systems and what some of the difficulties are for these. 
-    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected in ecological studies \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
+    Network theory has been widely applied to investigate the structure of biological systems such as food webs and other types of multi-level ecological interaction networks. There is now a rich body of work describing the structural properties of food webs, plant-pollinator networks, and host-parasite interactions (e.g. \cite{Lafferty2008, Thompson2012, Dunne2013, Stouffer2014, Cirtwill2015a}). Horizontal networks however, where interactions occur within the same level of organisation (for example interactions between plants belonging to the same food web) have been more neglected by network ecology \parencite{Ellison2019}. These elements and their interactions have been found to alter the structure, stability and diversity-functioning relationships of the whole multi-level system \parencite{Hammill2015, Giling2019, Zhao2019, Miele2019}, which makes integrating horizontal and vertical networks a key challenge in improving our understanding of system dynamics and persistence \parencite{Godoy2018c}.
 
     %\paragraph{} % I reckon this paragraph can be cut?? It doesn't bring that much to the intro... Can be kept for MEE
     %In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. One strategy is to look at associations between the nodes: nodes which are often found together are assumed to interact more strongly than nodes which rarely co-occur (e.g. \cite{Araujo2011}). This approach benefits from a wide range of packages available in R, requires fairly simple data (presence/absence of the nodes) and can be used to deduce associations between large numbers of nodes. An important drawback remains: association networks cannot always distinguish between the multiple confounding factors which lead to co-occurrence, and in ecological communities little evidence supports their use as a proxy for interactions \parencite{Sander2017,Barner2018, Thurman2019, Blanchet2020}.
+    %% [Keep this if I have enough spare words]
 
     \paragraph{} 
-    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. Performance can be any variable of interest which affects the dynamics of the system, for example population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method which is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
+    In many horizontal systems, interactions between nodes are not always easy to observe empirically and must instead be deduced through other means. A common approach in ecology is to directly quantify the effects of interacting nodes on the node of interest by evaluating its performance in the absence and presence of potential interaction partners \parencite{Connell1961, Grace1990}. 'Performance' can refer to any variable of interest that affects the dynamics of the system, for example [examples? energy generated, electrical activity, nutrients exchanged,..] population growth. The resulting interactions are phenomenological and thus not dependant on any specific mechanism, allowing us to capture a wide range of biological processes affecting the dynamics of the whole system \parencite{Novak2010}. Such methods can quickly become data intensive and computationally complex, however, as the number of nodes $S$ increases and the number of potential direct interactions subsequently increases to $S^2$. Highly diverse systems pose a further challenge: the abundance distribution of different elements is typically skewed, with a few nodes making up the majority of abundances and a large number of nodes remaining rare \parencite{Fisher1943}. Given that data collection is limited in time and scope, interactions with rarer nodes especially may not be realised simply by chance, excluding them from analysis regardless of the role they might play \parencite{Olesen2011}. Empirically quantifying interaction matrices for diverse horizontal systems thus requires a method that is flexible to both a high number of nodes, and potential gaps in our records of interactions. 
 
 
     \paragraph{} 
-    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which....... We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We show how the resulting interaction matrices differ from a spatial-abundance association network on the same data, and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
-
-    %Interactions between species can affect growth rates and population abundances, for example as a predator eats a prey or two plants compete for resources. Together, interactions between many species influence the dynamics of the whole community in ways which can determine patterns of species richness and abundance. In order to understand how community dynamics behave when many species are involved, ecologists can represent communities as networks \parencite{Pimm1978} where species are nodes and linked by interactions. This approach provides a broad view of how multiple species relate to one another within a community \parencite{Kefi2015}. As a result, ecological networks have been observed to typically differ from randomly-assembled networks in important and varied ways, thus informing us on the biological processes structuring these communities \parencite{Dunne2002}. 
-
+    We present a general framework to estimate interactions in highly diverse systems using Bayesian parameter estimation methods which....... We specify a joint model which allows us to estimate both realised and unrealised interactions, the latter being conditioned on the former. Using annual wildflower community data in Western Australia consisting of 22 focal species and up to 52 neighbouring species, we illustrate how this novel framework can be applied by couching the resulting interactions into established models of population dynamics. This allows us to account for other demographic processes affecting species performance, as well as translate interaction effects on the measured variable into effects on another variable of interest. We further show the benefits of this ... approach by comparing a range of findings on our test natural system derived from a spatial - abundance association network [I don't like this!!], and suggest potential applications in species management and conservation that make use of the rich information provided by species interaction networks.
 
     % \paragraph{}
     % Measuring non-trophic relationships in plant communities is difficult, in part because they cannot be directly observed as in food webs or other interaction networks, and must instead be inferred by other means. Arguably the most common approach to empirically quantifying interactions between a focal species and others involves measuring the effects of neighbours on a proxy for lifetime reproductive success (e.g. fecundity, growth rate) \parencite{Connell1961, Grace1990}. This can be done for example by growing focal species with neighbours of different identities and at varying densities, in the field or laboratory. The resulting phenomenological interaction strengths are not dependant on any specific mechanism and can be directly linked to changes in species abundances through the use of population dynamic models, for example with the Beverton-Holt model \parencite{Beverton1957, Levine2009}). This approach has been widely applied and has greatly improved our understanding of competition and its effects on biodiversity \parencite{Tilman1982, Chesson2000b, Levine2008, Adler2010, Mayfield2010a, Kraft2015} but remains limited to investigating interactions between few species, rather than a diverse community. The reason is two-fold: applying this method to a large number of species requires both large amounts of data and replication, as well as complex models which can be difficult to implement and run the danger of over-parameterisation. 
 
 \section{Methods}
 
-%\textbf{Note: I've left the species / fitness nomenclature throughout and added a little sentence explaining why as I'm not sure that switching to elements/performance will make it any clearer - happy to take advice on which makes more sense though}
-    
     \paragraph{}
     The joint model framework was initially developed for an ecological dataset where interacting species affect each other's lifetime reproductive success. As such we refer to network elements or nodes as 'species' and node performance as 'lifetime reproductive success' or 'fitness' however this framework is not limited to ecological datasets and can be applied to data from interacting elements (e.g. populations or groups of individuals) which meet the following criteria. First,   observations of focal individuals must record a proxy for performance, for example seed production, biomass or stem diameter growth as a proxies for lifetime reproductive success. Second,  these observations must also record the identity and abundance of neighbours within the interaction neighbourhood of each focal individual. Lastly, observations should be spatially replicated across several individuals for each focal element or species.
 
